# CXMonitoring

./: .gitignore  README.md  README_en.md  pyproject.toml  run_server.py
.test-tmp-debug/0159470946fd40fa8a1d3fba71712035/: rollout.jsonl  state_5.sqlite
.trae/documents/: frontend_refactor_plan.md
.trae/specs/refactor-ai-chat-interface/: checklist.md  spec.md  tasks.md
src/cxmonitoring/: __init__.py  config.py  main.py
src/cxmonitoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cxmonitoring/collector/: __init__.py  interaction_store.py  models.py  monitor.py  projector.py  repository.py
src/cxmonitoring/server/: __init__.py  app.py
src/cxmonitoring/static/: app.js  index.html  styles.css
tests/: test_app.py  test_projector.py  test_repository.py
